--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
@@ -54,8 +55,8 @@
         <button class="sign up-2">Sign up</button>
     </div>
 
-    <div class="footer">
-        <h4>Copyright © The Odin Project 2021  </h4>
+<div class="footer">
+    <h4>Copyright © The Odin Project 2021  </h4>
     </div>
 </body>
 </html>
