--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 <body>
     <div class="header">
-        <ul>
-            <li a href="#">header link one</li>
-            <li a href="#">header link two</li>
-            <li a href="#">header link three</li>
-        </ul>
-        <div class="logo">Header Logo</div>
-        <h2>This Website is awesome</h2>
-        <div class="content">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-        <button class="Sign up">Sign up</button>
-        <img src="" alt="">
+        <div class="top-header">
+            <h4>Header Logo</h4>
+            <ul>
+                <li a href="#">header link one</li>
+                <li a href="#">header link two</li>
+                <li a href="#">header link three</li>
+            </ul>
+
+        </div>
+    <h2>This Website is awesome</h2>
+    <div class="content">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+    <button class="Sign up">Sign up</button>
+    <img src="" alt="">
     </div>
 
     <div class="section-1">
@@ -55,8 +58,8 @@
         <button class="sign up-2">Sign up</button>
     </div>
 
-<div class="footer">
-    <h4>Copyright © The Odin Project 2021  </h4>
+    <div class="footer">
+        <h4>Copyright © The Odin Project 2021  </h4>
     </div>
 </body>
 </html>
