--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
         <div class="top-header">
             <h4>Header Logo</h4>
             <ul>
-                <li a href="#">header link one</li>
+                <li a href="#" style="margin-left:800px;">header link one</li>
                 <li a href="#">header link two</li>
                 <li a href="#">header link three</li>
             </ul>
-
         </div>
-    <h2>This Website is awesome</h2>
-    <div class="content">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-    <button class="Sign up">Sign up</button>
-    <img src="" alt="">
-    </div>
+        <div class="box">
+            <h2>This Website is awesome</h2>
+            <div class="text">This website has some subtext that goes here under the main title.It's a smaller font and the color is lower contrast</div>
+            <button class="Sign up">Sign up</button>
+        </div>
+        <span>
+            <img src="https://images.unsplash.com/photo-1652521887861-5ec257b41e0a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80" alt="picture of mountains" height="300x" width="600px">
+        </span>
 
     <div class="section-1">
         <h2>Some random information.</h2>
