--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
             </ul>
         </div>
         <div class="box">
-            <h2>This Website is awesome</h2>
-            <div class="text">This website has some subtext that goes here under the main title.It's a smaller font and the color is lower contrast</div>
+            <div style="font-style:extra-bold; font-size:48px;">This Website is awesome</div
+            <span class="text">This website has some subtext that goes here under the main title.It's a smaller font and the color is lower contrast</span>
             <button class="Sign up">Sign up</button>
         </div>
-        <span>
-            <img src="https://images.unsplash.com/photo-1652521887861-5ec257b41e0a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80" alt="picture of mountains" height="300x" width="600px">
-        </span>
+        
 
     <div class="section-1">
         <h2>Some random information.</h2>
