--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
         <div class="top-header">
             <h4>Header Logo</h4>
             <ul>
-                <li a href="#" style="margin-left:800px;">header link one</li>
+                <li a href="#">header link one</li>
                 <li a href="#">header link two</li>
                 <li a href="#">header link three</li>
             </ul>
         </div>
         <div class="box">
-            <div style="font-style:extra-bold; font-size:48px;">This Website is awesome</div
-            <span class="text">This website has some subtext that goes here under the main title.It's a smaller font and the color is lower contrast</span>
-            <button class="Sign up">Sign up</button>
+            <div style="font-style:extra-bold; font-size:48px;">This Website is awesome</div>
+            <span class="text" style="margin-top: 8px;">This website has some subtext that goes here under the main title.It's a smaller font and the color is lower contrast</span>
+            <button class="Sign up" style="margin-top:8px;">Sign up</button>
         </div>
+        <span>
+            <img src="https://images.unsplash.com/photo-1652521887861-5ec257b41e0a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80" alt="picture of mountains" height="200x" width="500px">
+       </span>
         
 
     <div class="section-1">
