--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="box">
             <div style="font-style:extra-bold; font-size:48px;">This Website is awesome</div>
-            <span class="text" style="margin-top: 8px;">This website has some subtext that goes here under the main title.It's a smaller font and the color is lower contrast</span>
+            <span class="text" style="margin-top: 8px;">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</span>
             <button class="Sign up" style="margin-top:8px;">Sign up</button>
         </div>
         <span>
@@ -27,31 +27,31 @@
        </span>
         
 
-    <div class="section-1">
-        <h2>Some random information.</h2>
+    <div class="section-1" >
+        <h2>Some random information</h2>
         <div class="container">
             <div class ="info">
-                <img src="#" alt="#">
+                <img src=https://images.unsplash.com/photo-1652093932112-3fbc369da1f3?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332 alt="white van" height="200px" width="200px">
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
             <div class="info">
-                <img src="#" alt="#">
+                <img src=https://images.unsplash.com/photo-1652093932112-3fbc369da1f3?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332 alt="white van" height="200px" width="200px">
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
             <div class="info">
-                <img src="#" alt="#">
+                <img src=https://images.unsplash.com/photo-1652093932112-3fbc369da1f3?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332 alt="white van" height="200px" width="200px">
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
             <div>
-                <img src="#" alt="#">
+                <img src=https://images.unsplash.com/photo-1652093932112-3fbc369da1f3?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332 alt="white van" height="200px" width="200px">
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
 
     <div class="section-2">
-        <p>this is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p>-thor, God of Thunder</p>
+        <p>this is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p><br>
+
 
     </div>
 
