--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
 
     <div class="section-1" >
-        <h2>Some random information</h2>
+        <h2>Some random information</h1>
         <div class="container">
             <div class ="info">
                 <img src=https://images.unsplash.com/photo-1652093932112-3fbc369da1f3?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332 alt="white van" height="200px" width="200px">
@@ -50,7 +50,8 @@
     </div>
 
     <div class="section-2">
-        <p>this is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p><br>
+        <p style="width: 800px;">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <div style="padding-left: 400px; font-weight:bold;" >-Thor, God of Thunder</div>
 
 
     </div>
