--- a/index.html
+++ b/index.html
@@ -52,18 +52,17 @@
     <div class="section-2">
         <p style="width: 800px;">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <div style="padding-left: 400px; font-weight:bold;" >-Thor, God of Thunder</div>
-
-
     </div>
 
-    <div class="section-3">
-        <p>Call to action! It's Time!<p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button class="sign up-2">Sign up</button>
+    <div class="section-3" style="margin-left:500px;margin-bottom:100px">
+        <div class="modal"></div>
+          <div style="font-weight:bold font-size:14px;" >Call to action! It's Time!</div>
+          <div style="font-color:E5E7EB; font-size:18px;">Sign up for our product by clicking that button right over there!</div>
+          <button class="sign-up-2" style="border-color:white; margin-left: 700px;">Sign up</button>
     </div>
 
-    <div class="footer">
-        <h4>Copyright © The Odin Project 2021  </h4>
+    <div class="footer" style="height:100px; width:2000px;">
+        <h4 style="margin-left:750px;">Copyright © The Odin Project 2021  </h4>
     </div>
 </body>
 </html>
